More css cleanup. Fix onsen bug that was pushing content down to adjust for status bar on mobile.

--- a/src/components/app/app.styl
+++ b/src/components/app/app.styl
@@ -8,6 +8,7 @@
 button, input, select
   font-size 16px
 
+// Onsen overrides
 // Remove default styles on mobile
 input[type=text] {
   /* Remove First */
@@ -15,6 +16,18 @@ input[type=text] {
   -moz-appearance: none;
   appearance: none;   
 }
+
+ons-toolbar:not([inline]) {
+  background: #eee;
+}
+
+:checked + .switch__toggle {
+  box-shadow: inset 0 0 0 2px #bbb;
+  background-color: #bbb;
+}
+
+.toolbar-button
+  color #000
 
 // Fix alignment of fab icons.
 .fab
